@@ -63,6 +63,8 @@ foreach ($this->contents as $content) { // run for each content
     			<?php if(Knowledgeroot_Acl::iAmAllowed('content_' . $content->getId(), 'delete')) { ?><a class="btn" href="javascript:;" onclick="if(confirm('<?= $this->translate('Do you really want to delete?') ?>')) { location.href='content/delete/<?php echo $content->getId(); ?>'; } else { return false; }"><?= $this->translate('delete') ?></a><?php } ?>
     			<?php if(Knowledgeroot_Acl::iAmAllowed('content_' . $content->getId(), 'edit')) { ?><a class="btn" href="javascript:;" onclick="window.open('content/move/<?php echo $content->getId(); ?>','Knowledgeroot','width=400,height=500,menubar=yes,resizable=yes,scrollbars=yes');"><?= $this->translate('move') ?></a><?php } ?>
     			<?php if(Knowledgeroot_Acl::iAmAllowed('content_' . $content->getId(), 'edit')) { ?><a class="btn" href="javascript:;" onclick="window.open('print/<?php echo $content->getId(); ?>','Knowledgeroot','width=640,height=480,menubar=yes,resizable=yes,scrollbars=yes');"><?= $this->translate('print') ?></a><?php } ?>
+			<?php if(Knowledgeroot_Acl::iAmAllowed('content_' . $content->getId(), 'edit')) { ?><a class="btn" href="content/moveup/<?php echo $content->getId(); ?>"><i class="icon-arrow-up"></i></a><?php } ?>
+			<?php if(Knowledgeroot_Acl::iAmAllowed('content_' . $content->getId(), 'edit')) { ?><a class="btn" href="content/movedown/<?php echo $content->getId(); ?>"><i class="icon-arrow-down"></i></a><?php } ?>
     		    </div>
     		    <div class="btn-group pull-right">
     			<a class="btn pull-right" href="#top"><?= $this->translate('Top') ?></a>
