@@ -1,3 +1,6 @@
+20131108 - fhabermann
+* added first implementation for content move up and down
+
 20131026 - fhabermann
 * added favicon (Closes: #22)
 
